--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
   <style>body { padding: 0; margin: 0; }</style>
 </head>
 
+<style>
+	@font-face {
+		font-family: myfont;
+		src: url(assets/PixelOperator-Bold.ttf);
+		font-weight: bold;
+	  }
+	  body {
+		font-family: myfont;
+	  }
+</style>
+
 <body>
 
 <pre id="elm"></pre>
